[build-system]
requires = ["hatchling", "hatch-vcs", "wheel", "cffi"]
build-backend = "hatchling.build"

[project]
name = "randquik"
version = "0.1.0"
description = "Extremely fast and cryptographically secure random number generator."
readme = "README.md"
license = ""
authors = [{ name = "Vasanko" }]
classifiers = [
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Security :: Cryptography",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["cffi>=1.0.1", "numpy"]
requires-python = ">=3.10"
keywords = [
    "random",
    "generator",
    "fast",
    "secure",
    "cryptographic",
    "randomness",
]

[project.urls]

[project.optional-dependencies]
dev = ["pytest", "ruff", "cryptography", "scipy"]

[tool.hatchling]

[tool.ruff]
extend-select = ["I", "W", "UP", "C4", "ISC", "S"]
# Worth selecting but still too broken: ASYNC, B, DTZ, FA
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "E402",
    "E741",
    "F811",
    "F821",
    # ruff format complains about these:
    "ISC001",
    "S101",
    "S102",
    "S104",
    "S311",
    "S603",
    "S607",
    "W191",
]
show-source = true
show-fixes = true

[tool.pytest.ini_options]
pythonpath = ["."]
